force-app/main/default/objects/Login_History__c/Login_History__c.object-meta.xml
<CustomObject>
    <description>Stores successful and failed login attempts for Salesforce production organization and enabled portals.</description>
    <label>Login History</label>
    <nameField>
        <label>Login History Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>