force-app/main/default/objects/Login_History__c/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <label>API Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>