force-app/main/default/objects/Login_History__c/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <label>API Version</label>
    <length>32</length>
    <type>Text</type>
</CustomField>