force-app/main/default/objects/Login_History__c/fields/Client_Version__c.field-meta.xml
<CustomField>
    <fullName>Client_Version__c</fullName>
    <label>Client Version</label>
    <length>64</length>
    <type>Text</type>
</CustomField>