force-app/main/default/objects/Login_History__c/fields/Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Login_URL__c</fullName>
    <label>Login URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>