force-app/main/default/objects/Login_History__c/fields/Source_IP__c.field-meta.xml
<CustomField>
    <fullName>Source_IP__c</fullName>
    <label>Source IP</label>
    <length>39</length>
    <type>Text</type>
</CustomField>