force-app/main/default/objects/Login_History__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Salesforce Username</description>
    <label>Username</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>